--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,13 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version> <!-- Use the latest version -->
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
